[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "property_investment_with_probabilities"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Caleb" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "tqdm",
    "typer",
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["property_investment_with_probabilities"]
include = ["pyproject.toml", "property_investment_with_probabilities/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["property_investment_with_probabilities"]
force-sort-within-sections = true

