[project]
name = "probabilistic-property"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "Caleb" },
    {name = "Caleb Mah", email = "calebmahweekeat@gmail.com"},
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "tqdm",
    "typer",
]
requires-python = "==3.13.*"
license = {text = "MIT"}


[tool.ruff]
line-length = 99
src = ["property_investment_with_probabilities"]
include = ["pyproject.toml", "property_investment_with_probabilities/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["property_investment_with_probabilities"]
force-sort-within-sections = true


[tool.pdm]
distribution = false
