[project]
name = "probabilistic-property"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "Caleb" },
    {name = "Caleb Mah", email = "calebmahweekeat@gmail.com"},
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib>=3.10.1",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn>=1.6.1",
    "tqdm",
    "typer",
    "seaborn>=0.13.2",
    "sktime>=0.36.0",
    "orbit>=0.2",
    "numpyro>=0.18.0",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
]
requires-python = "==3.13.*"
license = {text = "MIT"}


[tool.ruff]
line-length = 99
src = ["property_investment_with_probabilities"]
include = ["pyproject.toml", "property_investment_with_probabilities/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["property_investment_with_probabilities"]
force-sort-within-sections = true


[tool.pdm]
distribution = false
